--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "filp/whoops": "~2.0",
+        "laravel/framework": "5.5.*",
+        "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7",
+        "phpunit/phpunit": "~6.0",
         "khill/lavacharts" : "3.0.*"
     },
     "autoload": {
